src/gateway/manifests/gateway_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
  - port: 8002
    targetPort: 8002
    protocol: TCP
